Bug 101470 - Paragraph style drop down list doesn't allow edit a style that is not selected
Summary: Paragraph style drop down list doesn't allow edit a style that is not selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.beta2
Hardware: All All
: low normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: bibisected, regression
Depends on:
Blocks: Styles
  Show dependency treegraph
 
Reported: 2016-08-13 07:08 UTC by Daveo
Modified: 2016-10-06 14:42 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Full explanation of regression. (105.14 KB, application/vnd.oasis.opendocument.text)
2016-08-13 07:08 UTC, Daveo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daveo 2016-08-13 07:08:58 UTC
Created attachment 126779 [details]
Full explanation of regression.

Regression in 5.2.1 RC1
Not possible to edit any styles from the formatting toolbar, except the style at the current position within the open document.
See attached document for full details.
Comment 1 Jean-Baptiste Faure 2016-08-13 07:54:54 UTC
Not reproducible for me with Version: 5.2.2.0.0+
Build ID: 553f61ccf4cd9ea062c40ccd6de86b76b5497aeb
Threads CPU : 4; Version de l'OS :Linux 4.4; UI Render : par défaut; 
Ubuntu_16.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: single

built at home.

Best regards. JBF
Comment 2 Daveo 2016-08-13 08:27:35 UTC
(In reply to Jean-Baptiste Faure from comment #1)

It is not surprising, that you cannot cannot reproduce under Linux with a home built alpha. This is a Windows issue in a release candidate.
I suspect, but cannot confirm, this may in some way be related to Bug 100809.
Comment 3 m_a_riosv 2016-08-13 12:50:29 UTC
Reproducible.
Win10x64
Version: 5.2.1.1
Build ID: 2d75cf29e6d05e44c404f0547047f1da6563d380
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default;

When you try to select the dropdown for a style different than the current, selections changes for the current style the first time you try, trying again doesn't change the selected ans works right.

It doesn't happen with 
Version: 5.1.5.2 (x64)
Build ID: 7a864d8825610a8c07cfc3bc01dd4fce6a9447e5
CPU Threads: 1; OS Version: Windows 6.19; UI Render: default;
Comment 4 Daveo 2016-08-26 16:37:41 UTC
(In reply to m.a.riosv from comment #3)
> 
> When you try to select the dropdown for a style different than the current,
> selections changes for the current style the first time you try, trying
> again doesn't change the selected ans works right.

Can you please explain this in more detail? Are you claiming that users should repeat the attempted style change a second time to make it function as advertised. If so, my multiple repeated tests prove your claim to be untrue.

A facility that has worked since OOo 1.0 which remains a REGRESSION in LO RELEASE CANDIDATE 2 of Version 5.2.1 cannot be considered "Trivial".

I have resisted the temptation to set the "Importance" level of this regression to "High" and restored it to "Normal".
Comment 5 Daveo 2016-09-14 15:02:01 UTC
I have now had opportunity to test the released version of 5.2.1 under Linux 32&64bit also Windows 32&64bit. This "trivial" regression is 100% reproducible in all cases.
Comment 6 Aron Budea 2016-09-14 20:36:57 UTC
I triaged this a bit, reproduced with 5.2 beta2 / Windows 7, so I adjusted earliest affected version, and OS to All, since it was also reproduced in Linux.
Comment 7 raal 2016-09-30 20:02:07 UTC
note: unable to bisect, lots of skipped commits; ~/bibisect-win32-5.2
Comment 9 Xisco Faulí 2016-10-01 14:34:52 UTC
Hi Caolan,
Is it possible that this regression was introduced by this commit of yours https://cgit.freedesktop.org/libreoffice/core/commit/?id=dd46727b99d4bb5135451aa7e5e1bdb197373843 ?
Comment 10 Caolán McNamara 2016-10-03 08:34:58 UTC
seems so
Comment 11 Commit Notification 2016-10-03 09:19:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b72593fac6addd571158bd37deccccb0045104a8

Resolves: tdf#101470 don't restore last value when submenu appears

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2016-10-03 09:28:49 UTC
https://gerrit.libreoffice.org/#/c/29475/ for 5-2
Comment 13 Commit Notification 2016-10-06 14:42:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b73a8e115d9afaf7cc00906d158d1c2f1ba8829c&h=libreoffice-5-2

Resolves: tdf#101470 don't restore last value when submenu appears

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.