Resolves: tdf#101470 don't restore last value when submenu appears

Change-Id: Ia0cce8607334289b619b1f59dbdd67b000a06e01